--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.4",
     "postcss-loader": "^6.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.44.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1"
