--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
     "redux-promise-middleware": "^6.1.2",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
